--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,41 @@
 {
-    "name": "rpmeir/api-banco-inter",
-    "description": "API Boletos Banco Inter (Nao Oficial)",
-    "type": "project",
+    "name": "laravel/lumen",
+    "description": "The Laravel Lumen Framework.",
+    "keywords": ["framework", "laravel", "lumen"],
     "license": "MIT",
+    "type": "project",
+    "require": {
+        "php": "^7.3|^8.0",
+        "laravel/lumen-framework": "^8.0"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "pestphp/pest": "^1.20",
+        "phpunit/phpunit": "^9.3"
+    },
     "autoload": {
         "psr-4": {
-            "Rpmeir\\ApiBancoInter\\": "src/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
-    "authors": [
-        {
-            "name": "Rodrigo Pires Meira",
-            "email": "rpmeir@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require-dev": {
-        "pestphp/pest": "^1.20"
+    "autoload-dev": {
+        "classmap": [
+            "tests/"
+        ]
     },
-    "require": {
-        "react/http": "^1.5"
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "scripts": {
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
     }
 }
